unpackaged/main/default/objects/Work_Update_Action__c/Work_Update_Action__c.object-meta.xml
<CustomObject>
    <label>Work Update Action</label>
    <nameField>
        <label>Work Update Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Update Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>