unpackaged/main/default/objects/Work_Update_Action__c/fields/Delay__c.field-meta.xml
<CustomField>
    <fullName>Delay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delay</label>
    <type>Checkbox</type>
</CustomField>