unpackaged/main/default/objects/Work_Update_Action__c/fields/Drops__c.field-meta.xml
<CustomField>
    <fullName>Drops__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drops</label>
    <type>Checkbox</type>
</CustomField>