unpackaged/main/default/objects/Work_Update_Action__c/fields/OBS__c.field-meta.xml
<CustomField>
    <fullName>OBS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OBS</label>
    <type>Checkbox</type>
</CustomField>