unpackaged/main/default/objects/Work_Update_Action__c/fields/Safety__c.field-meta.xml
<CustomField>
    <fullName>Safety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety</label>
    <type>Checkbox</type>
</CustomField>