unpackaged/main/default/objects/Work_Update_Action__c/listViews/test.listView-meta.xml
<ListView>
    <fullName>test</fullName>
    <columns>NAME</columns>
    <columns>Delay__c</columns>
    <columns>Drops__c</columns>
    <columns>Falcon__c</columns>
    <columns>OBS__c</columns>
    <columns>Order__c</columns>
    <columns>Outage_Type__c</columns>
    <columns>Parts__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Safety__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Off-Site</value>
    </filters>
    <label>All Work Update Actions</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>